--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <input type="radio" name="img" id="radio2">
         <input type="radio" name="img" id="radio3">
         
-        <div class="item" id="item1">ok</div>
+        <div class="item" id="item1"></div>
         <div class="item" id="item2"></div>
         <div class="item" id="item3"></div>
 
